feat: add creating new tabs with file->open

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,10 +40,11 @@ qt_add_executable(hxutil
         include/code_editor.h
         src/code_editor.cpp
         include/color_palette.h
+        include/lanugage_specifics.h
         src/highlighter/ARMv6_ASM_highlighter.cpp
-        include/open_files_list.h
         #        src/binary_file_handler.cppm
         ${app_icon_macos}
+        src/file_modifier.cpp
 )
 
 #file(GLOB_RECURSE MODULE_INTERFACE_UNITS "*.cppm")
