--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,23 +2,28 @@ cmake_minimum_required(VERSION 3.19)
 project(hxutil LANGUAGES CXX)
 
 
-### LANGUAGE STANDARDS ###
+################################# LANGUAGE STANDARDS #################################
 set(CMAKE_CXX_STANDARD 23)
+add_compile_definitions(__cpp_lib_format=201907L)
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 set(CMAKE_PREFIX_PATH "/Users/arturtwardzik/Qt/6.8.3/macos/lib/cmake")
+set(CMAKE_CXX_FLAGS "-Wall -Wextra -Wpedantic -Werror \
+                     -Wno-error=unused-variable -Wno-error=unused-parameter -Wno-error=unused-private-field \
+                     -Wno-error=c++20-extensions -Wno-c++20-designator \
+                     -fsanitize=address")
 set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTORCC ON)
 set(CMAKE_AUTOUIC ON)
 #set(CMAKE_CXX_SCAN_FOR_MODULES ON)
 
 
-### ICON ###
+################################# ICON #################################
 set(MACOSX_BUNDLE_ICON_FILE icon.icns)
 set(app_icon_macos "${CMAKE_SOURCE_DIR}/Contents/Resources/icon.icns")
 set_source_files_properties(${app_icon_macos} PROPERTIES MACOSX_PACKAGE_LOCATION "Resources")
 
 
-### INCLUDES ###
+################################# INCLUDES #################################
 include_directories(${CMAKE_SOURCE_DIR} ui include src)
 link_directories(${CMAKE_SOURCE_DIR} ui include src)
 
@@ -30,7 +35,7 @@ find_package(Qt6 6.8.3 REQUIRED COMPONENTS WebEngineWidgets)
 qt_standard_project_setup()
 
 
-### SOURCES ###
+################################# SOURCES #################################
 qt_add_executable(hxutil
         MACOSX_BUNDLE
         ${app_icon_macos}
@@ -43,6 +48,7 @@ qt_add_executable(hxutil
         src/file_modifier.cpp include/file_modifier.h
         src/highlighter/highlighter.cpp include/highlighter.h
         src/highlighter/ARMv6_ASM_highlighter.cpp
+        include/file_viewer.h
         #        src/binary_file_handler.cppm
 )
 
@@ -52,6 +58,34 @@ qt_add_executable(hxutil
 #        FILE_SET modules TYPE CXX_MODULES FILES
 #        ${MODULE_INTERFACE_UNITS})
 
+
+################################# RUST SOURCES #################################
+set(CARGO_CMD cargo build --lib --manifest-path include/asmstatic/Cargo.toml)
+include_directories(include/asmstatic/include)
+set(TARGET_DIR "debug")
+
+set(LIB_FILE "${CMAKE_CURRENT_BINARY_DIR}/${TARGET_DIR}/libASMformatter.a")
+set(LIB_HEADER_FOLDER "${CMAKE_CURRENT_SOURCE_DIR}/include/asmstatic/include")
+
+add_custom_command(OUTPUT ${LIB_FILE}
+        COMMENT "Compiling rust module"
+        COMMAND CARGO_TARGET_DIR=${CMAKE_CURRENT_BINARY_DIR} ${CARGO_CMD}
+        WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
+
+add_custom_target(ASMformatter_lib_target DEPENDS ${LIB_FILE})
+
+add_library(ASMformatter_lib STATIC IMPORTED GLOBAL)
+add_dependencies(ASMformatter_lib ASMformatter_lib_target)
+set_target_properties(ASMformatter_lib
+        PROPERTIES
+        IMPORTED_LOCATION ${LIB_FILE}
+        INTERFACE_INCLUDE_DIRECTORIES ${LIB_HEADER_FOLDER})
+
+target_compile_options(hxutil PRIVATE -fno-omit-frame-pointer -fsanitize=address)
+target_link_libraries(hxutil PRIVATE ASMformatter_lib ${CMAKE_DL_LIBS} -fno-omit-frame-pointer -fsanitize=address)
+
+
+################################# QT #################################
 target_link_libraries(hxutil
         PRIVATE
         Qt::Core
